--- a/app/src/main/res/layout/activity_reagente.xml
+++ b/app/src/main/res/layout/activity_reagente.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jp3dr0.estoquelaboratorio.Fragments.ReagenteFragment">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    tools:context="com.jp3dr0.estoquelaboratorio.ReagenteActivity">
 
 </android.support.constraint.ConstraintLayout>
