--- a/app/src/main/res/layout/fragment_permissoes.xml
+++ b/app/src/main/res/layout/fragment_permissoes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jp3dr0.estoquelaboratorio.PermissoesFragment">
+    tools:context="com.jp3dr0.estoquelaboratorio.Fragments.PermissoesFragment">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
