refatorando todo o código, implementando MVP e injeção de dependência (sim, são 5 da manha, o sol ta nascendo, e eu to fazendo isso)

--- a/app/src/main/res/layout/fragment_edit_reagente.xml
+++ b/app/src/main/res/layout/fragment_edit_reagente.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.jp3dr0.estoquelaboratorio.EditReagenteFragment">
+    tools:context="com.jp3dr0.estoquelaboratorio.crud.update.EditReagenteFragment">
 
     <EditText
         android:id="@+id/nome"
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:inputType="number"
         android:id="@+id/qtdAberto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nome" />
 
     <EditText
+        android:inputType="number"
         android:id="@+id/qtdLacrado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,6 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/qtdAberto" />
 
     <EditText
+        android:inputType="number"
         android:id="@+id/qtdTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +52,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/qtdLacrado" />
 
-    <EditText
+    <Spinner
         android:id="@+id/classificacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,7 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/classificacao" />
 
-    <EditText
+    <Spinner
         android:id="@+id/unidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
