--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jp3dr0.estoquelaboratorio.LoginActivity">
+    tools:context="com.jp3dr0.estoquelaboratorio.login.mvp.view.LoginActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
