--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jp3dr0.estoquelaboratorio.PrincipalActivity">
+    tools:context="com.jp3dr0.estoquelaboratorio.garbage.PrincipalActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
