--- a/app/src/main/res/layout/activity_reagente.xml
+++ b/app/src/main/res/layout/activity_reagente.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jp3dr0.estoquelaboratorio.ReagenteActivity">
+    tools:context="com.jp3dr0.estoquelaboratorio.crud.read.ReagenteActivity">
 
     <android.support.v7.widget.Toolbar
         app:titleTextColor="#ffffff"
