--- a/app/src/main/res/layout/fragment_edit_vidraria.xml
+++ b/app/src/main/res/layout/fragment_edit_vidraria.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.jp3dr0.estoquelaboratorio.EditVidrariaFragment">
+    tools:context="com.jp3dr0.estoquelaboratorio.crud.update.EditVidrariaFragment">
 
     <EditText
         android:id="@+id/nome"
@@ -19,6 +19,7 @@
 
     <EditText
         android:id="@+id/qtd"
+        android:inputType="number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -29,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nome" />
 
-    <EditText
+    <Spinner
         android:id="@+id/tamanho"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,6 +43,7 @@
 
     <EditText
         android:id="@+id/valor"
+        android:inputType="number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -51,7 +53,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tamanho" />
 
-    <EditText
+    <Spinner
         android:id="@+id/unidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
