--- a/app/src/main/res/layout/fragment_vidraria.xml
+++ b/app/src/main/res/layout/fragment_vidraria.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jp3dr0.estoquelaboratorio.Fragments.VidrariaFragment">
+    tools:context="com.jp3dr0.estoquelaboratorio.crud.read.VidrariaFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
